source/raylib.pas


{Enable a set of gestures using flags}
procedure SetGesturesEnabled(flags: LongWord); cdecl; external cDllName;
{Check if a gesture have been detected}
function IsGestureDetected(gesture: Integer): Boolean;cdecl;external cDllName;
{Get latest detected gesture}
function GetGestureDetected: Integer; cdecl; external cDllName;
{Get gesture hold time in milliseconds}
function GetGestureHoldDuration: Single; cdecl; external cDllName;
{Get gesture drag vector}
function GetGestureDragVector: TVector2; cdecl; external cDllName;
{Get gesture drag angle}
function GetGestureDragAngle: Single; cdecl; external cDllName;
{Get gesture pinch delta}
function GetGesturePinchVector: TVector2; cdecl; external cDllName;
{Get gesture pinch angle}
function GetGesturePinchAngle: Single; cdecl; external cDllName;

//------------------------------------------------------------------------------------
// Camera System Functions (Module: rcamera)
//------------------------------------------------------------------------------------

{Set camera mode (multiple camera modes available)}
procedure SetCameraMode(camera: TCamera; mode: Integer); cdecl; external cDllName;
{Update camera position for selected mode}
procedure UpdateCamera(camera: PCamera); cdecl; external cDllName;
{Set camera pan key to combine with mouse movement (free camera)}
procedure SetCameraPanControl(keyPan: Integer); cdecl; external cDllName;
{Set camera alt key to combine with mouse movement (free camera)}
procedure SetCameraAltControl(keyAlt: Integer); cdecl; external cDllName;
{Set camera smooth zoom key to combine with mouse (free camera)}
procedure SetCameraSmoothZoomControl(keySmoothZoom: Integer); cdecl; external cDllName;
{Set camera move controls (1st person and 3rd person cameras)}
procedure SetCameraMoveControls(keyFront, keyBack, keyRight, keyLeft, keyUp, keyDown: Integer); cdecl; external cDllName;

//------------------------------------------------------------------------------------
// Basic Shapes Drawing Functions (Module: shapes)
//------------------------------------------------------------------------------------
// Set texture and rectangle to be used on shapes drawing
// NOTE: It can be useful when using basic shapes and one single font,
// defining a font char white rectangle would allow drawing everything in a single draw call

{Set texture and rectangle to be used on shapes drawing}
procedure SetShapesTexture(texture: TTexture2D; source: TRectangle); cdecl; external cDllName;

(* Basic shapes drawing functions *)

{Draw a pixel}
procedure DrawPixel(posX, posY: Integer; color: TColorB); cdecl; external cDllName;
{Draw a pixel (Vector version)}
procedure DrawPixelV(position: TVector2; color: TColorB); cdecl; external cDllName;
{Draw a line}
procedure DrawLine(startPosX, startPosY, endPosX, endPosY: Integer; color: TColorB); cdecl; external cDllName;
{Draw a line (Vector version)}
procedure DrawLineV(startPos, endPos: TVector2; color: TColorB); cdecl; external cDllName;
{Draw a line defining thickness}
procedure DrawLineEx(startPos, endPos: TVector2; thick: Single; color: TColorB); cdecl; external cDllName;
{Draw a line using cubic-bezier curves in-out}
procedure DrawLineBezier(startPos, endPos: TVector2; thick: Single; color: TColorB); cdecl; external cDllName;
{Draw line using quadratic bezier curves with a control point}
procedure DrawLineBezierQuad(startPos, endPos, controlPos: TVector2; thick: Single; color:TColorB); cdecl; external cDllName;
{Draw line using cubic bezier curves with 2 control points}
procedure DrawLineBezierCubic(startPos, endPos, startControlPos, endControlPos: TVector2; thick: Single; color: TColorB); cdecl; external cDllName;
{Draw lines sequence}
procedure DrawLineStrip(points: PVector2; pointCount: Integer; color: TColorB); cdecl; external cDllName;
{Draw a color-filled circle}
procedure DrawCircle(centerX, centerY: Integer; radius: Single; color: TColorB); cdecl; external cDllName;
{Draw a piece of a circle}
procedure DrawCircleSector(center: TVector2; radius, startAngle, endAngle: Single; segments: Integer; color: TColorB); cdecl; external cDllName;
{Draw circle sector outline}
procedure DrawCircleSectorLines(center: TVector2; radius, startAngle, endAngle: Single; segments: Integer; color: TColorB);cdecl;external cDllName;
{Draw a gradient-filled circle}
procedure DrawCircleGradient(centerX, centerY: Integer; radius: Single; color1, color2: TColorB); cdecl; external cDllName;
{Draw a color-filled circle (Vector version)}
procedure DrawCircleV(center: TVector2; radius: Single; color: TColorB); cdecl; external cDllName;
{Draw circle outline}
procedure DrawCircleLines(centerX, centerY: Integer; radius: Single; color: TColorB); cdecl; external cDllName;
{Draw ellipse}
procedure DrawEllipse(centerX, centerY: Integer; radiusH, radiusV: Single; color: TColorB); cdecl; external cDllName;
{Draw ellipse outline}
procedure DrawEllipseLines(centerX, centerY: Integer; radiusH, radiusV: Single; color: TColorB); cdecl; external cDllName;
{Draw ring}
procedure DrawRing(center: TVector2; innerRadius, outerRadius, startAngle, endAngle: Single; segments: Integer; color: TColorB); cdecl; external cDllName;
{Draw ring outline}
procedure DrawRingLines(center: TVector2; innerRadius, outerRadius, startAngle, endAngle: Single; segments: Integer; color: TColorB); cdecl; external cDllName;
{Draw a color-filled rectangle}
procedure DrawRectangle(posX, posY, width, height: Integer; color: TColorB); cdecl; external cDllName;
{Draw a color-filled rectangle (Vector version)}
procedure DrawRectangleV(position, size: TVector2; color: TColorB); cdecl; external cDllName;
{Draw a color-filled rectangle}
procedure DrawRectangleRec(rec: TRectangle; color: TColorB); cdecl; external cDllName;
{Draw a color-filled rectangle with pro parameters}
procedure DrawRectanglePro(rec: TRectangle; origin: TVector2; rotation: Single; color: TColorB); cdecl; external cDllName;
{Draw a vertical-gradient-filled rectangle}
procedure DrawRectangleGradientV(posX, posY, width, height: Integer; color1, color2: TColorB); cdecl; external cDllName;
{Draw a horizontal-gradient-filled rectangle}
procedure DrawRectangleGradientH(posX, posY, width, height: Integer; color1, color2: TColorB); cdecl; external cDllName;
{Draw a gradient-filled rectangle with custom vertex colors}
procedure DrawRectangleGradientEx(rec: TRectangle; col1, col2, col3, col4: TColorB); cdecl; external cDllName;
{Draw rectangle outline}
procedure DrawRectangleLines(posX, posY, width, height: Integer; color: TColorB); cdecl; external cDllName;
{Draw rectangle outline with extended parameters}
procedure DrawRectangleLinesEx(rec: TRectangle; lineThick: Single; color: TColorB); cdecl; external cDllName;
{Draw rectangle with rounded edges}
procedure DrawRectangleRounded(rec: TRectangle; roundness: Single; segments: Integer; color: TColorB); cdecl; external cDllName;
{Draw rectangle with rounded edges outline}
procedure DrawRectangleRoundedLines(rec: TRectangle; roundness: Single; segments: Integer; lineThick: Single; color: TColorB); cdecl; external cDllName;
{Draw a color-filled triangle (vertex in counter-clockwise order!)}
procedure DrawTriangle(v1, v2, v3: TVector2; color: TColorB); cdecl; external cDllName;
{Draw triangle outline (vertex in counter-clockwise order!)}
procedure DrawTriangleLines(v1, v2, v3: TVector2; color: TColorB); cdecl; external cDllName;
{Draw a triangle fan defined by points (first vertex is the center)}
procedure DrawTriangleFan(points: PVector2; pointCount: Integer; color: TColorB); cdecl; external cDllName;
{Draw a triangle strip defined by points}
procedure DrawTriangleStrip(points: PVector2; pointCount: Integer; color: TColorB); cdecl; external cDllName;
{Draw a regular polygon (Vector version)}
procedure DrawPoly(center: TVector2; sides: Integer; radius: Single; rotation: Single; color: TColorB); cdecl; external cDllName;
{Draw a polygon outline of n sides}
procedure DrawPolyLines(center: TVector2; sides: Integer; radius, rotation: Single; color: TColorB); cdecl; external cDllName;
{Draw a polygon outline of n sides with extended parameters }
procedure DrawPolyLinesEx(center: TVector2; sides: Integer; radius, rotation, lineThick: single; color: TColorB); cdecl; external cDllName;

(* Basic shapes collision detection functions *)

{Check collision between two rectangles}
function CheckCollisionRecs(rec1, rec2: TRectangle): Boolean; cdecl; external cDllName;
{Check collision between two circles}
function CheckCollisionCircles(center1: TVector2; radius1: Single; center2: TVector2; radius2: Single): Boolean; cdecl; external cDllName;
{Check collision between circle and rectangle}
function CheckCollisionCircleRec(center: TVector2; radius: Single; rec: TRectangle): Boolean; cdecl; external cDllName;
{Check if point is inside rectangle}
function CheckCollisionPointRec(point: TVector2; rec: TRectangle): Boolean; cdecl; external cDllName;
{Check if point is inside circle}
function CheckCollisionPointCircle(point, center: TVector2; radius: Single): Boolean; cdecl; external cDllName;
{Check if point is inside a triangle}
function CheckCollisionPointTriangle(point, p1, p2, p3: TVector2): Boolean; cdecl; external cDllName;
{Check the collision between two lines defined by two points each, returns collision point by reference}
function CheckCollisionLines(startPos1, endPos1, startPos2, endPos2: TVector2; collisionPoint: PVector2): Boolean; cdecl; external cDllName;
{Check if point belongs to line created between two points [p1] and [p2] with defined margin in pixels [threshold]}
function CheckCollisionPointLine(point, p1, p2: TVector2; threshold: Integer): Boolean; cdecl; external cDllName;
{Get collision rectangle for two rectangles collision}
function GetCollisionRec(rec1, rec2: TRectangle): TRectangle; cdecl; external cDllName;

//------------------------------------------------------------------------------------
// Texture Loading and Drawing Functions (Module: textures)
//------------------------------------------------------------------------------------

(* Image loading functions *)
// NOTE: This functions do not require GPU access

{Load image from file into CPU memory (RAM)}
function LoadImage(fileName: PChar): TImage; cdecl; external cDllName;
{Load image from RAW file data}
function LoadImageRaw(fileName: PChar; width, height, format, headerSize: Integer): TImage; cdecl; external cDllName;
{Load image sequence from file (frames appended to image.data)}
function LoadImageAnim(fileName: PChar; frames: PInteger):TImage; cdecl; external cDllName;
{Load image from memory buffer, fileType refers to extension: i.e. '.png'}
function LoadImageFromMemory(fileType: PChar; fileData: Pointer; dataSize: Integer): TImage; cdecl; external cDllName;
{Load image from GPU texture data}
function LoadImageFromTexture(texture: TTexture2D): TImage; cdecl; external cDllName;
{Load image from screen buffer and (screenshot)}
function LoadImageFromScreen: TImage; cdecl; external cDllName;
{Unload image from CPU memory (RAM)}
procedure UnloadImage(image: TImage); cdecl; external cDllName;
{Export image data to file, returns true on success}
function ExportImage(image: TImage; fileName: PChar): Boolean; cdecl; external cDllName;
{Export image as code file defining an array of bytes, returns true on success  }
function ExportImageAsCode(image: TImage; fileName: PChar): Boolean; cdecl; external cDllName;


(* Image generation functions *)
